[package]
name = "nrf8001-rs"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
heapless = "0.5.6"
nrf8001-sys = { git = "ssh://git@github.com/kesyog/nrf8001-arm.git", branch = "main" }
num-derive = "^0.3"
num-traits = {version = "^0.2", default-features = false}

[dependencies.libc]
version = "^0.2.82"
default-features = false

[dependencies.stm32f4xx-hal]
version = "^0.8.3"
features = ["rt", "stm32f401"]

[dependencies.stm32f4]
version = "^0.12.1"
features = ["rt", "stm32f401"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
